@@ -8,10 +8,29 @@
 "index/index","en_US","not_a_member","not a member? learn more"
 "index/index","en_US","password","password"
 "index/index","en_US","remembered_let_me_sign_in","remembered, let me sign in"
-"index/index","en_US","retrieved","retrieved"
+"index/index","en_US","retrieve","retrieve"
 "index/index","en_US","retrieved_let_me_sign_in","retrieved, let me sign in"
 "index/index","en_US","retrieved_msg_big","shortly you'll receive an e-mail with instructions to change your password"
 "index/index","en_US","retrieved_msg_small","remember to check your spam folder"
 "index/index","en_US","retrieved_password","retrieved password"
 "index/index","en_US","sign_in","sign in"
 "index/index","en_US","submit","submit"
+
+"signup/index","en_US","country","country"
+"signup/index","en_US","create_account","create account"
+"signup/index","en_US","email","e-mail"
+"signup/index","en_US","email_and_password","e-mail and password"
+"signup/index","en_US","name","name"
+"signup/index","en_US","password","password (6 to 32 characters)"
+"signup/index","en_US","personal_information","personal information"
+"signup/index","en_US","repassword","re-type password"
+"signup/index","en_US","sign_up","sign up"
+"signup/index","en_US","time_zone","time zone"
+
+"signup/welcome","en_US","free_plan_msg","<p>With the FREE plan you don't have to pay anything to use PostCanal.com.</p><p>Whenever you feel confortable you can upgrade anytime to a different subscription.</p>"
+"signup/welcome","en_US","sign_in","Sign in"
+"signup/welcome","en_US","sign_up","Sign Up"
+"signup/welcome","en_US","welcome_msg_normal","Shortly you'll receive an e-mail with a link to confirm you subscription. After this, you're ready to start using PostCanal.com."
+"signup/welcome","en_US","welcome_msg_small","Remember to check your spam folder."
+"signup/welcome","en_US","welcome_to_postcanal","Welcome to PostCanal!"
+"signup/welcome","en_US","youre_using_free_plan","You're using the FREE plan"
