@@ -8,10 +8,27 @@ INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'form_incompl
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'not_a_member', "not a member? learn more");
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'password', "password");
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'remembered_let_me_sign_in', "remembered, let me sign in");
-INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'retrieved', "retrieved");
+INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'retrieve', "retrieve");
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'retrieved_let_me_sign_in', "retrieved, let me sign in");
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'retrieved_msg_big', "shortly you'll receive an e-mail with instructions to change your password");
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'retrieved_msg_small', "remember to check your spam folder");
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'retrieved_password', "retrieved password");
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'sign_in', "sign in");
 INSERT INTO base_translation VALUES (NULL, 'index/index', 'en_US', 'submit', "submit");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'country', "country");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'create_account', "create account");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'email', "e-mail");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'email_and_password', "e-mail and password");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'name', "name");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'password', "password (6 to 32 characters)");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'personal_information', "personal information");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'repassword', "re-type password");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'sign_up', "sign up");
+INSERT INTO base_translation VALUES (NULL, 'signup/index', 'en_US', 'time_zone', "time zone");
+INSERT INTO base_translation VALUES (NULL, 'signup/welcome', 'en_US', 'free_plan_msg', "<p>With the FREE plan you don't have to pay anything to use PostCanal.com.</p><p>Whenever you feel confortable you can upgrade anytime to a different subscription.</p>");
+INSERT INTO base_translation VALUES (NULL, 'signup/welcome', 'en_US', 'sign_in', "Sign in");
+INSERT INTO base_translation VALUES (NULL, 'signup/welcome', 'en_US', 'sign_up', "Sign Up");
+INSERT INTO base_translation VALUES (NULL, 'signup/welcome', 'en_US', 'welcome_msg_normal', "Shortly you'll receive an e-mail with a link to confirm you subscription. After this, you're ready to start using PostCanal.com.");
+INSERT INTO base_translation VALUES (NULL, 'signup/welcome', 'en_US', 'welcome_msg_small', "Remember to check your spam folder.");
+INSERT INTO base_translation VALUES (NULL, 'signup/welcome', 'en_US', 'welcome_to_postcanal', "Welcome to PostCanal!");
+INSERT INTO base_translation VALUES (NULL, 'signup/welcome', 'en_US', 'youre_using_free_plan', "You're using the FREE plan");
