@@ -158,3 +158,11 @@ HORAS TRABALHADAS: 3h
 - alteracao de cadastro para nova tela de cadastro
 
 HORAS TRABALHADAS: 6h
+
+==========
+30/06/2009
+==========
+
+- translations e small fixes
+
+HORAS TRABALHADAS: 1h
